RESOLVED FIXED271068
[dav1d] Fix tile_start_off calculations for extremely large frame sizes
https://bugs.webkit.org/show_bug.cgi?id=271068
Summary [dav1d] Fix tile_start_off calculations for extremely large frame sizes
David Kilzer (:ddkilzer)
Reported 2024-03-15 11:16:57 PDT
Fix tile_start_off calculations for extremely large frame sizes. Merge upstream fix: <https://code.videolan.org/videolan/dav1d/-/commit/2b475307dc11be9a1c3cc4358102c76a7f386a51> <rdar://124700924>
Attachments
David Kilzer (:ddkilzer)
Comment 1 2024-03-15 11:23:03 PDT
EWS
Comment 2 2024-03-15 15:09:06 PDT
Committed 276207@main (4c23f1a14c60): <https://commits.webkit.org/276207@main> Reviewed commits have been landed. Closing PR #25959 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.