Cherry-pick 4c23f1a14c60. rdar://124974991

[dav1d] Fix tile_start_off calculations for extremely large frame sizes
    https://bugs.webkit.org/show_bug.cgi?id=271068
    <rdar://124700924>

    Unreviewed upstream merge of 2b475307dc11be9a1c3cc4358102c76a7f386a51.

    * Source/WebCore/PAL/ThirdParty/libavif/ThirdParty/dav1d/src/decode.c:
    (dav1d_decode_frame_init):
    * Source/WebCore/PAL/ThirdParty/libavif/ThirdParty/dav1d/src/internal.h:

    Canonical link: https://commits.webkit.org/276207@main

Identifier: 272448.768@safari-7618-branch